# PresenterPro

./: Cargo.toml  Dioxus.toml  LICENSE  Makefile.toml  README.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: audit.yml  covector-version-or-publish.yml  deploy-schema-worker.yml  fmt.yml  lint.yml  merge.yml  supply-chain.yml  test.yml  udeps.yml
.scripts/ci/: check-license-header.js
src-tauri/: Cargo.toml  tauri.conf.json
