[package]
name = "PresenterPro"
edition = "2021"
authors = ["hizuki-mimuro"]
license = "MIT"
repository = "https://github.com/hizuki-mimuro/PresenterPro"
homepage = "https://presenterpro.com"
documentation = "https://presenterpro.com"
keywords = ["dom", "ui", "gui", "react", "wasm"]
rust-version = "1.82.0"
publish = false
version = "0.6.0-alpha.5"

[dependencies]
dioxus = { version = "0.5", features = ["web"] }
dioxus-logger = "0.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[workspace]
members = ["src-tauri"]
